--- a/src/components/Header/_header.scss
+++ b/src/components/Header/_header.scss
@@ -2,6 +2,7 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
+    margin: 40px 6% 40px 6%;
 
     img {
         height: 68px;
