--- a/src/styles/_global.css
+++ b/src/styles/_global.css
@@ -1,1 +1,1 @@
-*{font-family:"Montserrat",sans-serif;margin:0;padding:0}body{margin:40px 6% 0px 6%}a{text-decoration:none}
+*{font-family:"Montserrat",sans-serif;margin:0;padding:0}a{text-decoration:none}
