--- a/src/styles/_global.scss
+++ b/src/styles/_global.scss
@@ -4,9 +4,9 @@
     padding: 0;
 }
 
-body {
-    margin: 40px 6% 0px 6%;
-}
+// body {
+    //     margin: 40px 6% 0px 6%;
+    // }
 
 a {
     text-decoration: none;
