--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -32,6 +32,40 @@ a {
   text-decoration: underline;
 }
 
+.homeSection {
+  margin: 0px 6% 0px 6%;
+}
+
+.homeBanner {
+  display: flex;
+  position: relative;
+  border-radius: 25px 25px 25px 25px;
+  height: 100%;
+  width: 100%;
+  overflow: hidden;
+  margin-bottom: 43px;
+}
+.homeBanner img {
+  height: 223px;
+  width: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+  -o-object-position: 50% 45%;
+     object-position: 50% 45%;
+  filter: brightness(70%);
+}
+.homeBanner p {
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  width: inherit;
+  font-size: 48px;
+  font-weight: 300;
+  color: white;
+  text-align: center;
+}
+
 .footer {
   display: flex;
   flex-direction: column;
