--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,4 +1,6 @@
 @import "./global";
+@import "./variables";
 @import "../components/Header/header";
 @import "../Home/home";
 @import "../components/Footer/footer";
+@import "../components/Error/error";
