--- a/src/components/Header/_header.css
+++ b/src/components/Header/_header.css
@@ -1,1 +1,1 @@
-.header{display:flex;align-items:center;justify-content:space-between;margin:40px 6% 40px 6%}.header img{height:68px}.navbar{display:flex;justify-content:space-between;width:250px}.navbar a{font-size:24px;font-weight:500;color:#ff6060}.navbar a:hover{text-decoration:underline}
+.header{display:flex;align-items:center;justify-content:space-between;margin:40px 6% 40px 6%}.header img{height:68px}.navbar{display:flex;justify-content:space-between;width:250px}.navbar a{font-size:24px;font-weight:500;color:#000}.navbar a:hover{text-decoration:underline}
