--- a/src/styles/_global.scss
+++ b/src/styles/_global.scss
@@ -1,3 +1,5 @@
+/*Global*/
+
 * {
     font-family: "Montserrat", sans-serif;
     margin: 0;
@@ -5,8 +7,8 @@
 }
 
 // body {
-    //     margin: 40px 6% 0px 6%;
-    // }
+//     margin: 40px 6% 0px 6%;
+// }
 
 a {
     text-decoration: none;
