--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,6 +1,6 @@
 @import "./global";
 @import "./variables";
 @import "../components/Header/header";
-@import "../Home/home";
+@import "../Pages/Home/home";
 @import "../components/Footer/footer";
 @import "../components/Error/error";
