--- a/src/components/Error/_error.scss
+++ b/src/components/Error/_error.scss
@@ -4,7 +4,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin: 100px;
+    margin: 169px 0px 159px 0px;
     text-align: center;
 
     * {
@@ -13,17 +13,37 @@
 
     h1 {
         font-size: 288px;
+        font-weight: bold;
     }
 
     h2 {
         font-size: 36px;
         font-weight: 500;
+        width: 80%;
     }
 
-    .homePage-link {
+    a {
         font-size: 18px;
         font-weight: 500;
         text-decoration: underline;
-        margin-top: 100px;
+        margin-top: 182px;
+    }
+}
+
+@media (max-width: 768px) {
+    .errorMessage {
+        h1 {
+            font-size: 96px;
+        }
+
+        h2 {
+            font-size: 18px;
+            font-weight: 500;
+        }
+
+        a {
+            font-size: 14px;
+            margin-top: 133px;
+        }
     }
 }
