--- a/src/components/Footer/_footer.css
+++ b/src/components/Footer/_footer.css
@@ -1,1 +1,1 @@
-.footer{display:flex;flex-direction:column;align-items:center;justify-content:center;height:209px;background-color:#000}.footer img{filter:brightness(0) invert(1);width:122px;margin-bottom:30px}.footer p{color:#fff}
+.footer{display:flex;flex-direction:column;align-items:center;justify-content:center;height:209px;background-color:#000}.footer img{filter:brightness(0) invert(1);width:122px;margin-bottom:30px}.footer p{font-size:24px;font-weight:500;color:#fff}@media(max-width: 768px){.footer p{font-size:12px}}
