--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -2,5 +2,6 @@
 @import "./variables";
 @import "../components/Header/header";
 @import "../pages/Home/home";
+@import "../pages/About/about";
 @import "../components/Footer/footer";
 @import "../components/Error/error";
