--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -102,6 +102,7 @@ a {
 .accordion-item {
   width: 70%;
   margin-bottom: 31px;
+  position: relative;
 }
 
 .accordion-title {
@@ -111,6 +112,7 @@ a {
   align-items: center;
   border-radius: 5px;
   padding: 10px 15px 9px 15px;
+  width: 100%;
   cursor: pointer;
 }
 .accordion-title img {
@@ -118,11 +120,20 @@ a {
 }
 .accordion-title * {
   color: white;
+  font-size: 24px;
+  font-weight: 400;
 }
 
 .accordion-content {
+  padding: 20px 15px 9px 15px;
+  position: relative;
+  width: 100%;
+  top: -10px;
+  z-index: -1;
   background-color: #F6F6F6;
   color: #FF6060;
+  font-size: 24px;
+  font-weight: 200;
 }
 
 /*Footer*/
