--- a/src/Pages/About/_about.scss
+++ b/src/Pages/About/_about.scss
@@ -22,6 +22,10 @@
 
     img {
         width: 16px;
+        -moz-user-select: none;
+        -webkit-user-select: none;
+        -ms-user-select: none;
+        user-select: none;
     }
 
     * {
@@ -29,6 +33,16 @@
         font-size: 24px;
         font-weight: 400;
     }
+}
+
+.arrow-up {
+    transform: rotate(0deg);
+    transition: 0.3s;
+}
+
+.arrow-down {
+    transform: rotate(180deg);
+    transition: 0.3s;
 }
 
 .accordion-content {
