--- a/src/Pages/About/_about.scss
+++ b/src/Pages/About/_about.scss
@@ -1,3 +1,39 @@
+/*About page*/
+
+.aboutSection {
+    margin: 0px 6% 0px 6%;
+}
+
+.aboutBanner {
+    display: flex;
+    position: relative;
+    height: 100%;
+    width: 100%;
+    overflow: hidden;
+    margin-bottom: 43px;
+
+    img {
+        height: 223px;
+        width: 100%;
+        border-radius: 25px;
+        object-fit: cover;
+        object-position: 50% 45%;
+        filter: brightness(70%);
+    }
+
+}
+
+@media (max-width: 768px) {
+    .aboutBanner {
+
+        img {
+            min-width: 223px;
+            border-radius: 10px;
+        }
+    }
+}
+
+/*Accordion menu*/
 .accordion {
     display: flex;
     flex-direction: column;
@@ -5,7 +41,7 @@
 }
 
 .accordion-item {
-    width: 70%;
+    width: 80%;
     margin-bottom: 31px;
     position: relative;
 }
