--- a/src/Pages/About/_about.scss
+++ b/src/Pages/About/_about.scss
@@ -10,7 +10,7 @@
     height: 100%;
     width: 100%;
     overflow: hidden;
-    margin-bottom: 43px;
+    margin-bottom: 31px;
 
     img {
         height: 223px;
@@ -23,16 +23,6 @@
 
 }
 
-@media (max-width: 768px) {
-    .aboutBanner {
-
-        img {
-            min-width: 223px;
-            border-radius: 10px;
-        }
-    }
-}
-
 /*Accordion menu*/
 .accordion {
     display: flex;
@@ -41,7 +31,7 @@
 }
 
 .accordion-item {
-    width: 80%;
+    width: 85%;
     margin-bottom: 31px;
     position: relative;
 }
@@ -53,7 +43,6 @@
     align-items: center;
     border-radius: 5px;
     padding: 10px 15px 9px 15px;
-    width: 100%;
     cursor: pointer;
 
     img {
@@ -68,6 +57,7 @@
         color: white;
         font-size: 24px;
         font-weight: 400;
+        // line-height: 34px;
     }
 }
 
@@ -82,13 +72,50 @@
 }
 
 .accordion-content {
-    padding: 20px 15px 9px 15px;
+    padding: 37px 15px 19px 15px;
     position: relative;
-    width: 100%;
     top: -10px;
     z-index: -1;
     background-color: $secondary;
     color: $primary;
     font-size: 24px;
     font-weight: 200;
+    line-height: 34px;
+}
+
+@media (max-width: 768px) {
+    .aboutBanner {
+
+        img {
+            min-width: 223px;
+            border-radius: 10px;
+        }
+    }
+
+    .accordion-item {
+        width: 100%;
+
+        * {
+            font-size: 12px;
+            font-weight: 400;
+            line-height: 17px;
+        }
+    }
+
+    .accordion-title {
+
+        * {
+            font-size: 13px;
+            font-weight: 500;
+        }
+
+    }
+
+    .accordion-content {
+        padding: 23px 15px 52px 15px;
+
+        * {
+            font-size: 12px;
+        }
+    }
 }
