--- a/src/Pages/About/_about.scss
+++ b/src/Pages/About/_about.scss
@@ -57,7 +57,10 @@
         color: white;
         font-size: 24px;
         font-weight: 400;
-        // line-height: 34px;
+        -moz-user-select: none;
+        -webkit-user-select: none;
+        -ms-user-select: none;
+        user-select: none;
     }
 }
 
