--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -150,6 +150,10 @@ a {
   color: white;
   font-size: 24px;
   font-weight: 400;
+  -moz-user-select: none;
+  -webkit-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
 }
 
 .arrow-up {
