--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -46,7 +46,153 @@ a {
     font-size: 12px;
   }
 }
-/*Home*/
+/*Footer*/
+.footer {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 209px;
+  background-color: black;
+}
+.footer img {
+  filter: brightness(0) invert(1);
+  width: 122px;
+  margin-bottom: 30px;
+}
+.footer p {
+  font-size: 24px;
+  font-weight: 500;
+  color: white;
+}
+
+@media (max-width: 768px) {
+  .footer p {
+    font-size: 12px;
+  }
+}
+/*Error page*/
+.errorMessage {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin: 169px 0px 159px 0px;
+  text-align: center;
+}
+.errorMessage * {
+  color: #FF6060;
+}
+.errorMessage h1 {
+  font-size: 288px;
+  font-weight: bold;
+}
+.errorMessage h2 {
+  font-size: 36px;
+  font-weight: 500;
+  width: 80%;
+}
+.errorMessage a {
+  font-size: 18px;
+  font-weight: 500;
+  text-decoration: underline;
+  margin-top: 182px;
+}
+
+@media (max-width: 768px) {
+  .errorMessage h1 {
+    font-size: 96px;
+  }
+  .errorMessage h2 {
+    font-size: 18px;
+    font-weight: 500;
+  }
+  .errorMessage a {
+    font-size: 14px;
+    margin-top: 133px;
+  }
+}
+/*Accordion menu*/
+.accordion {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.accordion-item {
+  width: 85%;
+  margin-bottom: 31px;
+  position: relative;
+}
+
+.accordion-title {
+  background-color: #FF6060;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  border-radius: 5px;
+  padding: 10px 15px 9px 15px;
+  cursor: pointer;
+}
+.accordion-title img {
+  width: 16px;
+  -moz-user-select: none;
+  -webkit-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
+.accordion-title * {
+  color: white;
+  font-size: 24px;
+  font-weight: 400;
+  -moz-user-select: none;
+  -webkit-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
+
+.arrow-up {
+  transform: rotate(0deg);
+  transition: 0.3s;
+}
+
+.arrow-down {
+  transform: rotate(180deg);
+  transition: 0.3s;
+}
+
+.accordion-content {
+  padding: 37px 15px 19px 15px;
+  position: relative;
+  top: -10px;
+  z-index: -1;
+  background-color: #F6F6F6;
+  color: #FF6060;
+  font-size: 24px;
+  font-weight: 200;
+  line-height: 34px;
+}
+
+@media (max-width: 768px) {
+  .accordion-item {
+    width: 100%;
+  }
+  .accordion-item * {
+    font-size: 12px;
+    font-weight: 400;
+    line-height: 17px;
+  }
+  .accordion-title * {
+    font-size: 13px;
+    font-weight: 500;
+  }
+  .accordion-content {
+    padding: 23px 15px 52px 15px;
+  }
+  .accordion-content * {
+    font-size: 12px;
+  }
+}
+/*House Card*/ /*Home*/
 .homeSection {
   margin: 0px 6% 0px 6%;
 }
@@ -117,153 +263,9 @@ a {
   filter: brightness(70%);
 }
 
-/*Accordion menu*/
-.accordion {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-
-.accordion-item {
-  width: 85%;
-  margin-bottom: 31px;
-  position: relative;
-}
-
-.accordion-title {
-  background-color: #FF6060;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  border-radius: 5px;
-  padding: 10px 15px 9px 15px;
-  cursor: pointer;
-}
-.accordion-title img {
-  width: 16px;
-  -moz-user-select: none;
-  -webkit-user-select: none;
-  -ms-user-select: none;
-  user-select: none;
-}
-.accordion-title * {
-  color: white;
-  font-size: 24px;
-  font-weight: 400;
-  -moz-user-select: none;
-  -webkit-user-select: none;
-  -ms-user-select: none;
-  user-select: none;
-}
-
-.arrow-up {
-  transform: rotate(0deg);
-  transition: 0.3s;
-}
-
-.arrow-down {
-  transform: rotate(180deg);
-  transition: 0.3s;
-}
-
-.accordion-content {
-  padding: 37px 15px 19px 15px;
-  position: relative;
-  top: -10px;
-  z-index: -1;
-  background-color: #F6F6F6;
-  color: #FF6060;
-  font-size: 24px;
-  font-weight: 200;
-  line-height: 34px;
-}
-
 @media (max-width: 768px) {
   .aboutBanner img {
     min-width: 223px;
     border-radius: 10px;
-  }
-  .accordion-item {
-    width: 100%;
-  }
-  .accordion-item * {
-    font-size: 12px;
-    font-weight: 400;
-    line-height: 17px;
-  }
-  .accordion-title * {
-    font-size: 13px;
-    font-weight: 500;
-  }
-  .accordion-content {
-    padding: 23px 15px 52px 15px;
-  }
-  .accordion-content * {
-    font-size: 12px;
-  }
-}
-/*Footer*/
-.footer {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  height: 209px;
-  background-color: black;
-}
-.footer img {
-  filter: brightness(0) invert(1);
-  width: 122px;
-  margin-bottom: 30px;
-}
-.footer p {
-  font-size: 24px;
-  font-weight: 500;
-  color: white;
-}
-
-@media (max-width: 768px) {
-  .footer p {
-    font-size: 12px;
-  }
-}
-/*Error page*/
-.errorMessage {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  margin: 169px 0px 159px 0px;
-  text-align: center;
-}
-.errorMessage * {
-  color: #FF6060;
-}
-.errorMessage h1 {
-  font-size: 288px;
-  font-weight: bold;
-}
-.errorMessage h2 {
-  font-size: 36px;
-  font-weight: 500;
-  width: 80%;
-}
-.errorMessage a {
-  font-size: 18px;
-  font-weight: 500;
-  text-decoration: underline;
-  margin-top: 182px;
-}
-
-@media (max-width: 768px) {
-  .errorMessage h1 {
-    font-size: 96px;
-  }
-  .errorMessage h2 {
-    font-size: 18px;
-    font-weight: 500;
-  }
-  .errorMessage a {
-    font-size: 14px;
-    margin-top: 133px;
   }
 }/*# sourceMappingURL=main.css.map */
