--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,9 @@
 @import "./global";
 @import "./variables";
 @import "../components/Header/header";
-@import "../pages/Home/home";
-@import "../pages/About/about";
 @import "../components/Footer/footer";
 @import "../components/Error/error";
+@import "../components/Accordion/accordion";
+@import "../components/Card/card";
+@import "../pages/Home/home";
+@import "../pages/About/about";
