--- a/src/components/Card/_card.scss
+++ b/src/components/Card/_card.scss
@@ -1,1 +1,10 @@
-/*House Card*/
+/* Card House */
+
+.card {
+
+    a {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+}
