--- a/src/components/Card/_card.css
+++ b/src/components/Card/_card.css
@@ -1,1 +1,1 @@
-.card a{display:flex;flex-direction:column;align-items:center}
+.card a{display:flex;flex-direction:column;align-items:center}.card img{width:90%}
