--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -4,6 +4,7 @@
 @import "../components/Footer/footer";
 @import "../components/Error/error";
 @import "../components/Accordion/accordion";
+@import "../components/Loader/loader";
 @import "../components/Card/card";
 @import "../pages/Home/home";
 @import "../pages/About/about";
