--- a/src/Pages/Home/_home.scss
+++ b/src/Pages/Home/_home.scss
@@ -40,12 +40,9 @@
 
 .cardsContainer {
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-columns: repeat(3, 1fr);
     grid-gap: 2.5rem;
-
-    img {
-        width: 90%;
-    }
+    place-items: center;
 }
 
 @media (max-width: 768px) {
