--- a/src/components/Card/_card.css
+++ b/src/components/Card/_card.css
@@ -1,1 +1,1 @@
-.card a{display:flex;flex-direction:column;align-items:center}.card img{width:90%}
+.card{width:100%;height:100%}.card a{display:flex;flex-direction:column;align-items:center;height:340px;width:100%;border-radius:10px;-o-object-fit:cover;object-fit:cover}
