--- a/src/components/Card/_card.scss
+++ b/src/components/Card/_card.scss
@@ -1,14 +1,24 @@
 /* Card House */
 
 .card {
+    width: 100%;
+    height: 100%;
+
 
     a {
         display: flex;
         flex-direction: column;
         align-items: center;
+        height: 340px;
+        width: 100%;
+        border-radius: 10px;
+        object-fit: cover;
     }
 
-    img {
-        width: 90%;
-    }
+    // img {
+  //     height: 340px;
+  //     width: 100%;
+  //     border-radius: 10px;
+  //     object-fit: cover;
+  // }
 }
