--- a/src/components/Loader/_loader.scss
+++ b/src/components/Loader/_loader.scss
@@ -4,6 +4,9 @@
     display: inline-block;
     width: 80px;
     height: 80px;
+    position: relative;
+    right: -50%;
+    transform: translate(-50%, 60%);
 }
 
 .circleLoader:after {
