--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -197,6 +197,9 @@ a {
   display: inline-block;
   width: 80px;
   height: 80px;
+  position: relative;
+  right: -50%;
+  transform: translate(-50%, 60%);
 }
 
 .circleLoader:after {
@@ -283,6 +286,7 @@ a {
 .homeCardSection {
   background: #F6F6F6;
   border-radius: 25px;
+  margin-bottom: 31px;
 }
 
 .cardsContainer {
