--- a/src/components/Card/_card.css
+++ b/src/components/Card/_card.css
@@ -1,1 +1,1 @@
-.card{width:100%;height:100%}.card a{display:flex;flex-direction:column;align-items:center;height:340px;width:100%;border-radius:10px;-o-object-fit:cover;object-fit:cover}
+.card{width:100%;height:100%}.card a{display:flex;flex-direction:column-reverse;align-items:flex-start;height:340px;width:100%;border-radius:10px;background-size:cover;background-repeat:no-repeat}.card a *{margin:20px;color:#fff}
