--- a/src/components/Card/_card.scss
+++ b/src/components/Card/_card.scss
@@ -7,12 +7,28 @@
 
     a {
         display: flex;
-        flex-direction: column;
-        align-items: center;
+        flex-direction: column-reverse;
+        align-items: flex-start;
         height: 340px;
         width: 100%;
         border-radius: 10px;
-        object-fit: cover;
+        background-size: cover;
+        background-repeat: no-repeat;
+
+//         :after {
+     //             content: "";
+     //             // display: block;
+     //  // position: absolute;
+     //  // top: 0;
+     //  // right: 0;
+     //  // bottom: 0;
+     //  // left: 0;
+     //         }
+
+        * {
+            margin: 20px;
+            color: #FFFFFF;
+        }
     }
 
     // img {
