--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -239,13 +239,17 @@ a {
 }
 .card a {
   display: flex;
-  flex-direction: column;
-  align-items: center;
+  flex-direction: column-reverse;
+  align-items: flex-start;
   height: 340px;
   width: 100%;
   border-radius: 10px;
-  -o-object-fit: cover;
-     object-fit: cover;
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+.card a * {
+  margin: 20px;
+  color: #FFFFFF;
 }
 
 /*Home*/
