--- a/src/components/Card/_card.scss
+++ b/src/components/Card/_card.scss
@@ -3,6 +3,7 @@
 .card {
     width: 100%;
     height: 100%;
+    position: relative;
 
 
     a {
@@ -12,29 +13,36 @@
         height: 340px;
         width: 100%;
         border-radius: 10px;
-        background-size: cover;
+        background-size: auto 100%;
+        background-position: center;
         background-repeat: no-repeat;
+        // transform-origin: center;
+        transition: all 0.35s ease-in-out;
 
-//         :after {
-     //             content: "";
-     //             // display: block;
-     //  // position: absolute;
-     //  // top: 0;
-     //  // right: 0;
-     //  // bottom: 0;
-     //  // left: 0;
-     //         }
+        &:hover {
+            background-size: auto 107%;
+        }
+
+        &::after {
+            content: "";
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background: linear-gradient(180deg,
+                    rgba(0, 0, 0, 0),
+                    rgba(0, 0, 0, 0.5));
+            border-radius: 10px;
+        }
+
 
         * {
             margin: 20px;
             color: #FFFFFF;
+            z-index: 1;
         }
-    }
 
-    // img {
-    //     height: 340px;
-    //     width: 100%;
-    //     border-radius: 10px;
-    //     object-fit: cover;
-    // }
+
+    }
 }
