--- a/src/Pages/Home/_home.scss
+++ b/src/Pages/Home/_home.scss
@@ -48,6 +48,13 @@
     padding: 56px 50px 56px 50px;
 }
 
+@media (max-width: 992px) {
+
+    .cardsContainer {
+        grid-template-columns: repeat(2, 1fr);
+    }
+}
+
 @media (max-width: 768px) {
     .homeBanner {
 
@@ -62,5 +69,17 @@
             text-align: left;
             left: 32%;
         }
+    }
+
+    .homeSection {
+        margin: 0px 20px 0px 20px;
+    }
+
+    .homeCardSection {
+        background: none;
+    }
+
+    .cardsContainer {
+        grid-template-columns: repeat(1, 1fr);
     }
 }
