--- a/src/components/Header/_header.scss
+++ b/src/components/Header/_header.scss
@@ -29,6 +29,8 @@
 
 @media (max-width: 768px) {
     .header {
+        margin: 20px 20px 16px 20px;
+
         img {
             height: 47px;
         }
