--- a/src/styles/_global.scss
+++ b/src/styles/_global.scss
@@ -1,5 +1,10 @@
 /*Global*/
 
+body {
+    display: flex;
+    justify-content: center;
+}
+
 * {
     font-family: "Montserrat", sans-serif;
     margin: 0;
@@ -12,4 +17,10 @@
 
 a {
     text-decoration: none;
+}
+
+@media (max-width: 768px) {
+    body {
+        display: block;
+    }
 }
