--- a/src/components/Card/_card.scss
+++ b/src/components/Card/_card.scss
@@ -13,14 +13,14 @@
         height: 340px;
         width: 100%;
         border-radius: 10px;
-        background-size: auto 115%;
+        background-size: auto 100%;
         background-position: center;
         background-repeat: no-repeat;
         // transform-origin: center;
         transition: all 0.35s ease-in-out;
 
         &:hover {
-            background-size: auto 120%;
+            background-size: auto 105%;
         }
 
         &::after {
@@ -44,5 +44,16 @@
         }
 
 
+    }
+}
+
+@media (max-width: 768px) {
+    .card a {
+        background-size: cover;
+        transition: none;
+
+        &:hover {
+            background-size: cover;
+        }
     }
 }
