--- a/src/styles/_global.css
+++ b/src/styles/_global.css
@@ -1,1 +1,1 @@
-body{display:flex;justify-content:center}*{font-family:"Montserrat",sans-serif;margin:0;padding:0}a{text-decoration:none}@media(max-width: 768px){body{display:block}}
+*{font-family:"Montserrat",sans-serif;margin:0;padding:0}a{text-decoration:none}
