--- a/src/Pages/House/_house.scss
+++ b/src/Pages/House/_house.scss
@@ -1,9 +1,11 @@
 h1 {
     font-size: 36px;
+    font-weight: 500;
     color: $primary;
 }
 
 h2 {
     font-size: 18px;
     color: $primary;
+    font-weight: 500;
 }
