--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -393,10 +393,12 @@ a {
 }
 h1 {
   font-size: 36px;
+  font-weight: 500;
   color: #FF6060;
 }
 
 h2 {
   font-size: 18px;
   color: #FF6060;
+  font-weight: 500;
 }/*# sourceMappingURL=main.css.map */
