--- a/src/Pages/House/_house.scss
+++ b/src/Pages/House/_house.scss
@@ -1,11 +1,54 @@
-h1 {
-    font-size: 36px;
-    font-weight: 500;
-    color: $primary;
+/* House */
+
+.houseTitles {
+    margin-right: 20px;
+
+    h1 {
+        font-size: 36px;
+        font-weight: 500;
+        color: $primary;
+    }
+
+    h2 {
+        font-size: 18px;
+        color: $primary;
+        font-weight: 500;
+    }
 }
 
-h2 {
-    font-size: 18px;
-    color: $primary;
-    font-weight: 500;
+
+.logement {
+    margin: 0px 6% 0px 6%;
+}
+
+.primaryInformations {
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-start;
+}
+
+.host {
+    display: flex;
+    align-items: center;
+
+    .hostName {
+        margin-right: 10px;
+    }
+
+    .hostPicture {
+        overflow: hidden;
+        width: 64px;
+        height: 64px;
+        border-radius: 50%;
+    }
+
+    img {
+        object-fit: cover;
+        width: 100%;
+    }
+
+    * {
+        color: $primary;
+        text-align: right;
+    }
 }
