--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -281,6 +281,29 @@ a {
     background-size: cover;
   }
 }
+/* Tag */
+.tagsGroup {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 12px;
+  margin: 24px 0px 24px 0px;
+}
+.tagsGroup .tag {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #FF6060;
+  min-width: 115px;
+  height: 25px;
+  border-radius: 10px;
+  color: white;
+  list-style: none;
+  font-size: 14px;
+  font-weight: 500;
+  text-align: center;
+  padding: 3px 15px 3px 15px;
+}
+
 /*Home*/
 .homeSection {
   margin: 0px 6% 0px 6%;
@@ -391,14 +414,50 @@ a {
     border-radius: 10px;
   }
 }
-h1 {
+/* House */
+.houseTitles {
+  margin-right: 20px;
+}
+.houseTitles h1 {
   font-size: 36px;
   font-weight: 500;
   color: #FF6060;
 }
-
-h2 {
+.houseTitles h2 {
   font-size: 18px;
   color: #FF6060;
   font-weight: 500;
+}
+
+.logement {
+  margin: 0px 6% 0px 6%;
+}
+
+.primaryInformations {
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-start;
+}
+
+.host {
+  display: flex;
+  align-items: center;
+}
+.host .hostName {
+  margin-right: 10px;
+}
+.host .hostPicture {
+  overflow: hidden;
+  width: 64px;
+  height: 64px;
+  border-radius: 50%;
+}
+.host img {
+  -o-object-fit: cover;
+     object-fit: cover;
+  width: 100%;
+}
+.host * {
+  color: #FF6060;
+  text-align: right;
 }/*# sourceMappingURL=main.css.map */
