--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -6,6 +6,7 @@
 @import "../components/Accordion/accordion";
 @import "../components/Loader/loader";
 @import "../components/Card/card";
+@import "../components/Tag/tag";
 @import "../pages/Home/home";
 @import "../pages/About/about";
 @import "../pages/House/house";
