--- a/src/components/tag/_tag.scss
+++ b/src/components/tag/_tag.scss
@@ -21,6 +21,21 @@
       font-weight: 500;
       text-align: center;
       // line-height: 1.5;
-      padding: 3px 15px 3px 15px;
+      padding: 2px 15px 2px 15px;
    }
+}
+
+@media (max-width: 768px) {
+
+   .tagsGroup {
+
+
+      .tag {
+         min-width: 84px;
+         font-size: 10px;
+         padding: 0px 15px 0px 15px;
+      }
+   }
+
+
 }
