--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -301,9 +301,30 @@ a {
   font-size: 14px;
   font-weight: 500;
   text-align: center;
-  padding: 3px 15px 3px 15px;
+  padding: 2px 15px 2px 15px;
 }
 
+@media (max-width: 768px) {
+  .tagsGroup .tag {
+    min-width: 84px;
+    font-size: 10px;
+    padding: 0px 15px 0px 15px;
+  }
+}
+/* Rate */
+.blankStar,
+.filledStar {
+  width: 36px;
+  height: 36px;
+}
+
+@media (max-width: 768px) {
+  .blankStar,
+.filledStar {
+    width: 18px;
+    height: 18px;
+  }
+}
 /*Home*/
 .homeSection {
   margin: 0px 6% 0px 6%;
@@ -476,4 +497,19 @@ a {
 }
 .content .accordion-content {
   list-style: none;
+}
+
+.secondaryInformations {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+@media (max-width: 768px) {
+  .houseTitles h1 {
+    font-size: 18px;
+  }
+  .houseTitles h2 {
+    font-size: 14px;
+  }
 }/*# sourceMappingURL=main.css.map */
