--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -7,6 +7,7 @@
 @import "../components/Loader/loader";
 @import "../components/Card/card";
 @import "../components/Tag/tag";
+@import "../components/Rate/rate";
 @import "../pages/Home/home";
 @import "../pages/About/about";
 @import "../pages/House/house";
