--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -436,6 +436,24 @@ a {
   }
 }
 /* House */
+.globalInformations {
+  display: flex;
+  justify-content: space-between;
+}
+
+.primaryInformations {
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-start;
+  flex-direction: column;
+}
+
+.secondaryInformations {
+  display: flex;
+  align-items: end;
+  flex-direction: column;
+}
+
 .houseTitles {
   margin-right: 20px;
 }
@@ -452,12 +470,6 @@ a {
 
 .logement {
   margin: 0px 6% 0px 6%;
-}
-
-.primaryInformations {
-  display: flex;
-  justify-content: space-between;
-  align-items: flex-start;
 }
 
 .host {
@@ -497,12 +509,6 @@ a {
 }
 .content .accordion-content {
   list-style: none;
-}
-
-.secondaryInformations {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
 }
 
 @media (max-width: 768px) {
