--- a/src/Pages/House/_house.scss
+++ b/src/Pages/House/_house.scss
@@ -16,6 +16,8 @@
     display: flex;
     align-items: end;
     flex-direction: column;
+    justify-content: flex-start;
+    min-width: 180px;
 }
 
 .houseTitles {
