--- a/src/components/Rate/_rate.css
+++ b/src/components/Rate/_rate.css
@@ -1,1 +1,1 @@
-.blankStar,.filledStar{width:36px;height:36px}@media(max-width: 768px){.blankStar,.filledStar{width:18px;height:18px}}
+.blankStar,.filledStar{width:36px;height:36px;margin-top:12px}@media(max-width: 768px){.blankStar,.filledStar{width:18px;height:18px}}
