--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -316,6 +316,7 @@ a {
 .filledStar {
   width: 36px;
   height: 36px;
+  margin-top: 12px;
 }
 
 @media (max-width: 768px) {
@@ -452,6 +453,8 @@ a {
   display: flex;
   align-items: end;
   flex-direction: column;
+  justify-content: flex-start;
+  min-width: 180px;
 }
 
 .houseTitles {
