--- a/src/components/tag/_tag.scss
+++ b/src/components/tag/_tag.scss
@@ -28,12 +28,12 @@
 @media (max-width: 768px) {
 
    .tagsGroup {
-
+      margin: 10px 0px 16px 0px;
 
       .tag {
          min-width: 84px;
          font-size: 10px;
-         padding: 0px 15px 0px 15px;
+         padding: 0px 10px 0px 10px;
       }
    }
 
