--- a/src/Pages/House/_house.scss
+++ b/src/Pages/House/_house.scss
@@ -14,7 +14,7 @@
 
 .secondaryInformations {
     display: flex;
-    align-items: end;
+    align-items: flex-end;
     flex-direction: column;
     justify-content: flex-start;
     min-width: 180px;
@@ -92,6 +92,10 @@
 }
 
 @media (max-width: 768px) {
+
+    .logement {
+        margin: 0px 20px 0px 20px;
+    }
 
     .houseTitles {
         margin-right: 0px;
