--- a/src/components/Carousel/_carousel.css
+++ b/src/components/Carousel/_carousel.css
@@ -1,1 +1,1 @@
-.caroussel img{width:400px;height:200px}
+.caroussel{display:flex;width:auto;height:415px}.prevBoutton,.nextBoutton{background-color:#7fffd4;margin:0px;width:50px;height:50px;cursor:pointer}
