--- a/src/components/Carousel/_carousel.scss
+++ b/src/components/Carousel/_carousel.scss
@@ -1,4 +1,17 @@
-.caroussel img {
-    width: 400px;
-    height: 200px;
+.caroussel {
+    display: flex;
+    width: auto;
+    height: 415px;
+}
+
+.caroussel>img {}
+
+.prevBoutton,
+.nextBoutton {
+    background-color: aquamarine;
+    margin: 0px;
+    // border: none;
+    width: 50px;
+    height: 50px;
+    cursor: pointer;
 }
