--- a/src/components/Carousel/_carousel.scss
+++ b/src/components/Carousel/_carousel.scss
@@ -1,56 +1,61 @@
 .caroussel {
-    display: flex;
     width: 100%;
     height: 415px;
+    display: flex;
     position: relative;
-}
+    border-radius: 25px;
 
-.currentSlide {
-    width: 100%;
-    height: 100%;
-}
-
-.slidePosition {
-    position: absolute;
-    left: 50%;
-    right: 50%;
-    top: 90%;
-    bottom: 6%;
-    color: white;
-    text-align: center;
-    font-weight: 500;
-    font-size: 18px;
-    line-height: 142.6%;
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
 }
 
 .carousselNavigation {
-    position: absolute;
     display: flex;
-    top: 50%;
     width: 100%;
+    height: 100%;
+    align-items: center;
     justify-content: space-between;
 
-    .prevBoutton {
+    img {
+        height: 60px;
+    }
+}
+
+.prevBoutton,
+.nextBoutton {
+    display: flex;
+    align-items: center;
+    height: 100%;
+    cursor: pointer;
+}
+
+.prevBoutton {
+
+    img {
         transform: rotate(270deg)
     }
+}
 
-    .nextBoutton {
+.nextBoutton {
+
+    img {
         transform: rotate(90deg)
     }
 }
 
-.caroussel>img {}
+.slidePosition {
+    position: absolute;
+    left: 48.95%;
+    right: 49.11%;
+    top: 86.19%;
+    bottom: 6.01%;
+    color: white;
 
-.prevBoutton,
-.nextBoutton {
-    // background-color: aquamarine;
-    margin: 0px;
-    // border: none;
-    width: 80px;
-    height: 47px;
-    cursor: pointer;
-
-    img {
-        width: 100%;
-    }
+    font-weight: 500;
+    font-size: 18px;
+    line-height: 142.6%;
+    display: flex;
+    align-items: flex-end;
+    text-align: center;
 }
