--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -282,54 +282,56 @@ a {
   }
 }
 .caroussel {
-  display: flex;
   width: 100%;
   height: 415px;
+  display: flex;
   position: relative;
-}
-
-.currentSlide {
-  width: 100%;
-  height: 100%;
-}
-
-.slidePosition {
-  position: absolute;
-  left: 50%;
-  right: 50%;
-  top: 90%;
-  bottom: 6%;
-  color: white;
-  text-align: center;
-  font-weight: 500;
-  font-size: 18px;
-  line-height: 142.6%;
+  border-radius: 25px;
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
 }
 
 .carousselNavigation {
-  position: absolute;
   display: flex;
-  top: 50%;
   width: 100%;
+  height: 100%;
+  align-items: center;
   justify-content: space-between;
 }
-.carousselNavigation .prevBoutton {
-  transform: rotate(270deg);
-}
-.carousselNavigation .nextBoutton {
-  transform: rotate(90deg);
+.carousselNavigation img {
+  height: 60px;
 }
 
 .prevBoutton,
 .nextBoutton {
-  margin: 0px;
-  width: 80px;
-  height: 47px;
+  display: flex;
+  align-items: center;
+  height: 100%;
   cursor: pointer;
 }
-.prevBoutton img,
+
+.prevBoutton img {
+  transform: rotate(270deg);
+}
+
 .nextBoutton img {
-  width: 100%;
+  transform: rotate(90deg);
+}
+
+.slidePosition {
+  position: absolute;
+  left: 48.95%;
+  right: 49.11%;
+  top: 86.19%;
+  bottom: 6.01%;
+  color: white;
+  font-weight: 500;
+  font-size: 18px;
+  line-height: 142.6%;
+  display: flex;
+  align-items: flex-end;
+  text-align: center;
 }
 
 /* Tag */
