--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -301,6 +301,10 @@ a {
 }
 .carousselNavigation img {
   height: 60px;
+  -moz-user-select: none;
+  -webkit-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
 }
 
 .prevBoutton,
@@ -310,13 +314,49 @@ a {
   height: 100%;
   cursor: pointer;
 }
+.prevBoutton img,
+.nextBoutton img {
+  z-index: 1;
+}
 
 .prevBoutton img {
   transform: rotate(270deg);
 }
+.prevBoutton:hover::after {
+  opacity: 0.2;
+  transition: opacity 300ms ease;
+}
+.prevBoutton::after {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 96px;
+  height: 100%;
+  background: rgb(0, 0, 0);
+  opacity: 0;
+  border-radius: 25px 0px 0px 25px;
+  transition: opacity 300ms ease;
+}
 
 .nextBoutton img {
   transform: rotate(90deg);
+}
+.nextBoutton:hover::after {
+  opacity: 0.2;
+  transition: opacity 300ms ease;
+}
+.nextBoutton::after {
+  content: "";
+  position: absolute;
+  top: 0;
+  right: 0;
+  width: 96px;
+  height: 100%;
+  background: rgb(0, 0, 0);
+  opacity: 0;
+  border-radius: 0px 25px 25px 0px;
+  transition: opacity 300ms ease;
 }
 
 .slidePosition {
@@ -497,6 +537,7 @@ a {
 .globalInformations {
   display: flex;
   justify-content: space-between;
+  margin-top: 30px;
 }
 
 .primaryInformations {
