--- a/src/components/Carousel/_carousel.scss
+++ b/src/components/Carousel/_carousel.scss
@@ -111,3 +111,24 @@
     align-items: flex-end;
     text-align: center;
 }
+
+@media (max-width: 768px) {
+    .caroussel {
+        height: 255px;
+    }
+
+    .carousselNavigation img {
+        height: 20px;
+    }
+
+    .prevBoutton,
+    .nextBoutton {
+        &::after {
+            display: none;
+        }
+    }
+
+    .slidePosition {
+        display: none;
+    }
+}
