Media queries : Card, home et ajout des src

--- a/src/components/Card/_card.scss
+++ b/src/components/Card/_card.scss
@@ -50,6 +50,7 @@
 @media (max-width: 768px) {
     .card a {
         background-size: cover;
+        height: 255px;
         transition: none;
 
         &:hover {
