--- a/src/Pages/Home/_home.scss
+++ b/src/Pages/Home/_home.scss
@@ -7,26 +7,30 @@
 .homeBanner {
     display: flex;
     position: relative;
-    height: 100%;
+    height: 223px;
     width: 100%;
-    overflow: hidden;
+    border-radius: 25px;
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
     margin-bottom: 43px;
+    justify-content: center;
+    align-items: center;
 
-    img {
-        height: 223px;
+    &::before {
+        content: "";
+        position: absolute;
+        top: 0;
+        left: 0;
         width: 100%;
+        height: 100%;
+        background:
+            rgba(0, 0, 0, 0.3);
         border-radius: 25px;
-        object-fit: cover;
-        object-position: 50% 45%;
-        filter: brightness(70%);
     }
 
     p {
-        position: absolute;
-        left: 50%;
-        top: 50%;
-        transform: translate(-50%, -50%);
-        width: inherit;
+        z-index: 1;
         font-size: 48px;
         font-weight: 300;
         color: white;
@@ -58,17 +62,19 @@
 @media (max-width: 768px) {
     .homeBanner {
         margin-bottom: 0px;
+        justify-content: flex-start;
+        height: 111px;
+        border-radius: 10px;
 
-        img {
-            height: 111px;
+        &::before {
             border-radius: 10px;
         }
 
         p {
-            width: 50%;
             font-size: 24px;
             text-align: left;
-            left: 32%;
+            width: 200px;
+            margin-left: 20px;
         }
     }
 
@@ -83,6 +89,6 @@
     .cardsContainer {
         grid-template-columns: repeat(1, 1fr);
         grid-gap: 1.5rem;
-        padding: 22px 0px 22px 0px;
+        padding: 22px 0px 0px 0px;
     }
 }
