--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -275,6 +275,7 @@ a {
 @media (max-width: 768px) {
   .card a {
     background-size: cover;
+    height: 255px;
     transition: none;
   }
   .card a:hover {
@@ -446,27 +447,28 @@ a {
 .homeBanner {
   display: flex;
   position: relative;
-  height: 100%;
-  width: 100%;
-  overflow: hidden;
-  margin-bottom: 43px;
-}
-.homeBanner img {
   height: 223px;
   width: 100%;
   border-radius: 25px;
-  -o-object-fit: cover;
-     object-fit: cover;
-  -o-object-position: 50% 45%;
-     object-position: 50% 45%;
-  filter: brightness(70%);
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  margin-bottom: 43px;
+  justify-content: center;
+  align-items: center;
+}
+.homeBanner::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.3);
+  border-radius: 25px;
 }
 .homeBanner p {
-  position: absolute;
-  left: 50%;
-  top: 50%;
-  transform: translate(-50%, -50%);
-  width: inherit;
+  z-index: 1;
   font-size: 48px;
   font-weight: 300;
   color: white;
@@ -495,16 +497,18 @@ a {
 @media (max-width: 768px) {
   .homeBanner {
     margin-bottom: 0px;
-  }
-  .homeBanner img {
+    justify-content: flex-start;
     height: 111px;
     border-radius: 10px;
   }
+  .homeBanner::before {
+    border-radius: 10px;
+  }
   .homeBanner p {
-    width: 50%;
     font-size: 24px;
     text-align: left;
-    left: 32%;
+    width: 200px;
+    margin-left: 20px;
   }
   .homeSection {
     margin: 0px 20px 0px 20px;
@@ -515,7 +519,7 @@ a {
   .cardsContainer {
     grid-template-columns: repeat(1, 1fr);
     grid-gap: 1.5rem;
-    padding: 22px 0px 22px 0px;
+    padding: 22px 0px 0px 0px;
   }
 }
 /*About page*/
