--- a/src/Pages/House/_house.scss
+++ b/src/Pages/House/_house.scss
@@ -26,14 +26,15 @@
 
     h1 {
         font-size: 36px;
-        font-weight: 500;
+        font-weight: 300;
         color: $primary;
     }
 
     h2 {
+        margin-top: 12px;
         font-size: 18px;
         color: $primary;
-        font-weight: 500;
+        font-weight: 300;
     }
 }
 
@@ -48,7 +49,7 @@
 
     * {
         font-size: 18px;
-        font-weight: 500;
+        font-weight: 300;
     }
 
     .hostName {
@@ -80,6 +81,7 @@
 
     .accordion-item {
         width: 100%;
+        font-weight: 300;
     }
 
     .description,
@@ -103,6 +105,7 @@
 
         h1 {
             font-size: 18px;
+            line-height: 25px;
         }
 
         h2 {
@@ -114,7 +117,6 @@
     .host {
         * {
             font-size: 12px;
-            font-weight: 500;
         }
 
         .hostPicture {
@@ -125,7 +127,7 @@
 
     .globalInformations {
         flex-direction: column;
-        margin-top: 15px;
+        margin-top: 10px;
     }
 
     .secondaryInformations {
@@ -144,9 +146,9 @@
         }
 
         .description {
-    .accordion-item {
-        margin-bottom: 20px;
-    }
-}
+            .accordion-item {
+                margin-bottom: 20px;
+            }
+        }
     }
 }
