--- a/src/components/Card/_card.scss
+++ b/src/components/Card/_card.scss
@@ -38,9 +38,12 @@
 
 
         * {
-            margin: 20px;
+            margin: 20px 20px 15px 20px;
             color: #FFFFFF;
             z-index: 1;
+            font-weight: 300;
+            font-size: 18px;
+            line-height: 25px
         }
 
 
