--- a/src/components/Carousel/_carousel.scss
+++ b/src/components/Carousel/_carousel.scss
@@ -18,7 +18,7 @@
     justify-content: space-between;
 
     img {
-        height: 60px;
+        height: 47px;
         -moz-user-select: none;
         -webkit-user-select: none;
         -ms-user-select: none;
@@ -57,7 +57,7 @@
         position: absolute;
         top: 0;
         left: 0;
-        width: 96px;
+        width: 75.2px;
         height: 100%;
         background:
             rgba(0, 0, 0);
@@ -87,7 +87,7 @@
         position: absolute;
         top: 0;
         right: 0;
-        width: 96px;
+        width: 75.2px;
         height: 100%;
         background: rgba(0, 0, 0);
         opacity: 0;
@@ -115,6 +115,7 @@
 @media (max-width: 768px) {
     .caroussel {
         height: 255px;
+        border-radius: 10px;
     }
 
     .carousselNavigation img {
